[package]
name = "ex7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
rand = "0.8.5"
thiserror = "1.0.56"
plotters-iced = "0.9"
iced = { version = "0.10", features = ["canvas", "tokio"] }
plotters="0.3"
circular-buffer = "0.1.6"